[tool.poetry]
name = "chult-encounters"
version = "0.1.0"
description = ""
authors = ["Bradley Sherman <sirrus233@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.0"
PyQt5 = "^5.14.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
